Ensuring content displays full width in the gallery and aligns center correctly on the homepage.

--- a/public/css/global.styl
+++ b/public/css/global.styl
@@ -42,7 +42,7 @@ body
   font-size 16px
 
   padding 10px 20px
-  margin 0 22px
+  // margin-left 22px
 
 strong
   font-weight 800
@@ -108,6 +108,7 @@ h3
 
 .gallery
 
+  position absolute
   margin-left 150px
 
   img
@@ -157,8 +158,7 @@ h3
 .splash
   img
      display block
-     margin-left auto
-     margin-right auto
+     margin 0 auto
      height auto
      max-height 700px
      max-width 100%
